@@ -1,3 +1,8 @@
+2004-01-07  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* poe-xemacs.el (run-at-time): Don't use `defadvice' in order to
+	avoid a conflict with the Gnus version.
+
 2003-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* poe-xemacs.el (run-at-time): Fully implement it for the recent
